@@ -1,5 +1,5 @@
-DIST maven-profile-2.0.tar.bz2 9863 RMD160 39cb09cfab28c58605057c4d29dd8d723056fd9e SHA1 d3a22b63d19c4ad84211e8144ff03266f9f34986 SHA256 1c803f4cc61c4a6d453468d14eaf3e321cfe40f545e48ca66eb758ecff1dd18b
-DIST maven-profile-gen-src-2.0.tar.bz2 9216 RMD160 e333dbd00eeba7e250f6aee49a1a0b27a35e25a9 SHA1 022d56160a2044c9854aeabd0895dde0a0454368 SHA256 f0c00fc970f664e6fc6a705b476185169b0cd5c4e02d7f69dbf79900f9f8e861
-EBUILD maven-profile-2.0.ebuild 687 RMD160 b7266827cbae3a707b0f5c58c593f7c03806e8bd SHA1 b01183f12720205883b6b8d38c86846900108b4b SHA256 0c7d4c98a7d3fc15e2dfc56f7d1e24dd9a79e4b9ef0e4e22a55f2c3fcfe02689
-MISC ChangeLog 586 RMD160 6690a9e2898c2449fced45fad414f556936537ce SHA1 85f3a8d6bae81aa718fb46fc87f26fc1d7e1b981 SHA256 3a82dd2f167800d6f406f50b7501399188a29da92c92775fdd0152a5ff5359be
+DIST maven-profile-2.1_pre20070611-gen-src.tar.bz2 12119 RMD160 0a55eee44269389f848bde42ade9288e1f651c4e SHA1 63c824f1c74994177d4c6ac84320c549b429fd89 SHA256 6d35cdcd5e5d30832aa108c485e275afc0003280937207b2220cbb9e5ab89404
+DIST maven-profile-2.1_pre20070611.tar.bz2 10110 RMD160 fb193efaea669d34484af4563dcf12abe6424dcb SHA1 ec83cbf6e3475620eadc7d6ed8497947d19bee52 SHA256 89e24f5223128328131bf9e30c2750193b1fce64b799a1ba0f6508c38448f7e9
+EBUILD maven-profile-2.1_pre20070611.ebuild 761 RMD160 eaac85e3fe44ccac17b606a579cef291dc6d44e0 SHA1 b0ceadd800fc257a45bcde10032a94bc84f23bce SHA256 cd5a58da2bbb13b3a167aa16ed86c2ec1bd24a6cba74cebb3a3631c913b21687
+MISC ChangeLog 718 RMD160 7fdbc84163765a9571200b43d51913ae989815a7 SHA1 394a86cd82c4056af65656e3a00825569fb217e6 SHA256 02a2f5dd0c576c73181ad8d02df9efe226f4b1d8a6c31da7476a356364d49e71
 MISC metadata.xml 157 RMD160 ab0b3741457dee7531f59c4da0f0e9e8399af084 SHA1 c37a6b9922aef61b5b3387655bccb6e3b16e0e26 SHA256 295d02c5805b0257938eb80314b371daac94b8d6ea85629a902de7a824adc0c9
